--- a/Hackhaton-Dev21-Main/style.css
+++ b/Hackhaton-Dev21-Main/style.css
@@ -1142,10 +1142,80 @@
     }
     
     /* Add animation to 4 logos */
+     
+    /*How it work section */
+.work-wrapper{
+  margin-top: 10rem;
+  margin-bottom: 5rem;
+  background-color:var(--eerie-black-2) ;
+  padding: 3rem 2rem;
+}
+.header-wrapper p{
+  max-width: 500px;
+  color:#888;
+}
+.header-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.card-wrapper{
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.card-one{
+  width: 290px;
+ 
+  min-height: 350px;
+   background-color: #ddd; 
+  /* padding: 1rem 2rem; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 1rem;
+  /* color: #361500; */
+  color: #111;
+  margin: 1rem 2rem;
+  box-shadow: 0px 0px 10px #c57c15;
+  border: 1px solid #C57C15;
+  transition: 250ms ease;
+  vertical-align: center;
+}
+
+.card-one:hover{
+  transform: scale(1.03);
+}
+    .card-one img{
+      max-width: 120px;
+      width:100%;
+    }
+    .card-one h3{
+      margin: 0.5rem 0rem;
+      color:#c57c15;
+    }
     
-    
-    
-    
+    .card-one p{
+      flex: 1;
+      display: flex;
+      align-items: center;
+      
+     
+    }
+
+
+
+
+
+
+
     
     /* RESERVATION/CONTACT US */
     :root {
@@ -1709,7 +1779,6 @@
       .underline{
         width:100%;
         height:5px;
-        
         background: #fff; 
         border-radius: 3px;
         position: absolute;
